components/ua/authenticate-frontend-pre-prod-testing/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticate-frontend-pre-prod-testing
spec:
  template:
    spec:
      containers:
        - name: authenticate-frontend
          #Pre prod testing image
          image: ghcr.io/isisbusapps/authenticate-frontend@sha256:ec0d4de4bb82cbf46f8ada3519c6ece85659d26b0c921fcccd246a07dccf81d1
          volumeMounts:
            - mountPath: /front_end/config/allowed-redirects.json
              name: allowed-redirects
              subPath: allowed-redirects.json
            - mountPath: /front_end/config/internal-redirects.json
              name: internal-redirects
              subPath: internal-redirects.json
      volumes:
        - name: allowed-redirects
          configMap:
            name: allowed-redirects
        - name: internal-redirects
          configMap:
            name: internal-redirects
