components/ua/authenticate-frontend-pre-prod-testing/overlays/dev/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authenticate-frontend-pre-prod-testing
spec:
  parentRefs:
  - name: envoy-gateway
    kind: Gateway
    namespace: envoy-gateway-system
    sectionName: https-facilities
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /nafe-testing
    backendRefs:
    - name: authenticate-frontend-pre-prod-testing
      port: 3000
